--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -168,6 +168,10 @@ pixel_block:       4
 # The path of the compensation image. This is relative to the current working folder, not _this_ config file.
 # This file will be overwritten by the CompensationImage experiment, and used by other experiments if/when they
 # become aware of this capability.
-compensation_image_path:    CompensationImage.jpg
+compensation_image_path:  CompensationImage.png
+
+# The number of individual compensation images that are captured and combined in order to reduce noise in the final
+# compensation image.
+compensation_image_count:  10
 
 ...
